--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=starter-server:* nodemon ./bin/www",
-    "dev-windows": "nodemon ./bin/www"
+    "start-dev": "nodemon ./bin/www"
+    // "start": "node ./bin/www",
+    // "dev": "DEBUG=starter-server:* nodemon ./bin/www",
+    // "dev-windows": "nodemon ./bin/www"
+
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
