--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
